tests/analyzer/errors/already_imported.rv
use data.math
use data.math

fn main() {
    {
        use data.math
        use data.math
    }
}
